// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`given JSON Schema definition with no empty values should do nothing 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchema201909Element)
      (JSONSchema201909Element))))
`;

exports[`given empty value for LinkDescription.templateRequired field should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement
        (MemberElement
          (StringElement)
          (ArrayElement))))))
`;

exports[`given empty value for field allOf should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchema201909Element))))
`;

exports[`given empty value for field anyOf should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchema201909Element)
      (JSONSchema201909Element))))
`;

exports[`given empty value for field examples should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement)))
`;

exports[`given empty value for field oneOf should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (JSONSchema201909Element)
      (JSONSchema201909Element))))
`;

exports[`given empty value for field type should replace empty value with semantic element 1`] = `
(JSONSchema201909Element
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement)))
`;
